--- a/app/views/error/forbidden.scala.html
+++ b/app/views/error/forbidden.scala.html
@@ -28,7 +28,7 @@
       <i class="ico ico-err2"></i>
       <p>@Messages(messageKey)</p>
       @if(UserApp.currentUser.isAnonymous){
-      <a href="@routes.UserApp.loginForm?redirectUrl=@request.uri" class="ybtn ybtn-primary" data-login="required">@Messages("title.login")</a>
+      <a href="@routes.UserApp.loginForm?redirectUrl=@requestHeader.uri" class="ybtn ybtn-primary" data-login="required">@Messages("title.login")</a>
       }
     </div>
   </div>
