--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(title:String, issueForm:Form[Issue], issue:Issue,  project:Project)
+@(title:String, issueForm: play.data.Form[Issue], issue:Issue,  project:Project)
 @import helper._
 @import scala.collection.mutable.Map
 @import models.enumeration.ResourceType
