--- a/app/views/milestone/create.scala.html
+++ b/app/views/milestone/create.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(title:String, form: Form[Milestone], project: Project)
+@(title:String, form: play.data.Form[Milestone], project: Project)
 
 @import utils.TemplateHelper._
 @import models.enumeration._
