--- a/app/views/project/setting.scala.html
+++ b/app/views/project/setting.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(message: String)(projectForm: Form[Project], project: Project, branches: List[String])
+@(message: String)(projectForm: play.data.Form[Project], project: Project, branches: List[String])
 
 @import helper._
 @import utils.TemplateHelper._
