--- a/app/views/site/userList.scala.html
+++ b/app/views/site/userList.scala.html
@@ -179,7 +179,7 @@
     <script type="text/x-jquery-tmpl" id="dismissable-alerts-request">
         <div class="alert alert-fail">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <h4>sending request...</h4>
+            <h4>sending requestHeader...</h4>
         </div>
     </script>
 
