--- a/app/views/user/signup.scala.html
+++ b/app/views/user/signup.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(message: String, newUserForm: Form[User])
+@(message: String, newUserForm: play.data.Form[User])
 
 @import utils.TemplateHelper._
 
