--- a/app/views/welcome/secret.scala.html
+++ b/app/views/welcome/secret.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(SITEADMIN_DEFAULT_LOGINID: String, newUserForm: Form[User])
+@(SITEADMIN_DEFAULT_LOGINID: String, newUserForm: play.data.Form[User])
 @import utils.TemplateHelper._
 <!DOCTYPE html>
 <html>
