--- a/app/views/code/nohead.scala.html
+++ b/app/views/code/nohead.scala.html
@@ -21,12 +21,12 @@
 @(project: Project)
 
 @getCodeURL(project: Project) = @{
-    if(session == null){
+    if(requestHeader.session == null){
         CodeApp.getURL(project.owner, project.name)
     } else {
-        defining(ProjectUser.roleOf(session.get("loginId"), project)) { role =>
+        defining(ProjectUser.roleOf(UserApp.currentUser.loginId, project)) { role =>
             if(role == "manager" || role == "member"){
-                CodeApp.getURL(project.owner, project.name).replace("://", "://" + session.get("loginId") + "@")
+                CodeApp.getURL(project.owner, project.name).replace("://", "://" + UserApp.currentUser.loginId + "@")
             } else {
                 CodeApp.getURL(project.owner, project.name)
             }
