--- a/app/views/common/select2.scala.html
+++ b/app/views/common/select2.scala.html
@@ -22,7 +22,7 @@
 <script src="@routes.Assets.at("javascripts/lib/select2/select2.js")"></script>
 <script src="@routes.Assets.at("javascripts/common/yobi.ui.Select2.js")"></script>
 @{
-    lang.language match {
+    implicitJavaLang.language match {
         case "ko" => {
             Html("<script src=\"" + routes.Assets.at("javascripts/lib/select2/select2_locale_ko.js") + "\"></script>")
         }
