--- a/app/views/git/create.scala.html
+++ b/app/views/git/create.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(title:String, form:Form[PullRequest], project:Project, projects:List[Project],
+@(title:String, form: play.data.Form[PullRequest], project:Project, projects:List[Project],
   fromProject:Project, toProject:Project,
   fromBranches:List[playRepository.GitBranch], toBranches:List[playRepository.GitBranch],
   pullRequest:models.PullRequest)
