--- a/app/views/issue/partial_list_quicksearch.scala.html
+++ b/app/views/issue/partial_list_quicksearch.scala.html
@@ -37,7 +37,7 @@
     @if(!UserApp.currentUser().isAnonymous){
     <li @if(param.assigneeId == UserApp.currentUser().id){ class="active"}>
         <a pjax-filter href="#"
-           data-assignee-id="@User.findByLoginId(session.get("loginId")).id"
+           data-assignee-id="@UserApp.currentUser.id"
            data-author-id=""
            data-milestone-id="@param.milestoneId">
             @Messages("issue.list.assignedToMe")
@@ -47,7 +47,7 @@
     <li @if(param.authorId == UserApp.currentUser().id){ class="active"}>
         <a pjax-filter href="#"
            data-assignee-id=""
-           data-author-id="@User.findByLoginId(session.get("loginId")).id"
+           data-author-id="@UserApp.currentUser.id"
            data-milestone-id="@param.milestoneId">
             @Messages("issue.list.authoredByMe")
             <span class="num-badge pull-right">@Issue.countIssuesBy(project.id, paramForIssuesAuthoredByMe)</span>
