--- a/app/views/organization/setting.scala.html
+++ b/app/views/organization/setting.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(organization:Organization, organizationForm: Form[Organization])
+@(organization:Organization, organizationForm: play.data.Form[Organization])
 
 @import utils.TemplateHelper._
 
