--- a/app/views/project/importing.scala.html
+++ b/app/views/project/importing.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(title:String, newProjectForm:Form[Project], orgUserList:List[OrganizationUser])
+@(title:String, newProjectForm: play.data.Form[Project], orgUserList:List[OrganizationUser])
 
 @import utils.TemplateHelper._
 @import playRepository.RepositoryService
