--- a/app/views/project/partial_settingmenu.scala.html
+++ b/app/views/project/partial_settingmenu.scala.html
@@ -27,7 +27,7 @@
 @isActiveSubMenu(calls: Call*) = @{
     var menuState = ""
     for(call <- calls) {
-        if(call.toString().equals(request().path())) {
+        if(call.toString().equals(requestHeader.path)) {
             menuState = "active"
         }
     }
