--- a/app/views/search/partial_posts.scala.html
+++ b/app/views/search/partial_posts.scala.html
@@ -25,7 +25,7 @@
 @import utils.JodaDateUtil
 
 @defining(searchResult.getPosts) { page =>
-    @if(page.getList.length > 0) {
+    @if(page.getList.size > 0) {
     <ul class="search-list-wrap">
         @for(post <- page.getList) {
             @defining(User.findByLoginId(post.authorLoginId)){ user =>
