--- a/app/views/search/partial_projects.scala.html
+++ b/app/views/search/partial_projects.scala.html
@@ -25,7 +25,7 @@
 @import utils.JodaDateUtil._
 
 @defining(searchResult.getProjects) { page =>
-    @if(page.getList.length > 0) {
+    @if(page.getList.size > 0) {
     <ul class="search-list-wrap">
         @for(project <- page.getList) {
             @defining(User.findByLoginId(project.owner)){ user =>
