--- a/app/views/search/partial_users.scala.html
+++ b/app/views/search/partial_users.scala.html
@@ -25,7 +25,7 @@
 @import utils.JodaDateUtil
 
 @defining(searchResult.getUsers) { page =>
-    @if(page.getList.length > 0) {
+    @if(page.getList.size > 0) {
     <ul class="search-list-wrap">
         @for(user <- page.getList) {
             <li class="search-list-item project">
