--- a/app/views/user/edit_emails.scala.html
+++ b/app/views/user/edit_emails.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(userForm:Form[User], user:User)
+@(userForm: play.data.Form[User], user:User)
 
 @import helper._
 @import utils.TemplateHelper._
