--- a/app/views/user/login.scala.html
+++ b/app/views/user/login.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(message:String, authInfoForm:Form[AuthInfo], redirectUrl:String)
+@(message:String, authInfoForm: play.data.Form[AuthInfo], redirectUrl:String)
 
 @siteLayout(message, utils.MenuType.NONE) {
 <div class="page full">
