--- a/app/views/user/resetPassword.scala.html
+++ b/app/views/user/resetPassword.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(message: String, newUserForm: Form[User], hashString: String)
+@(message: String, newUserForm: play.data.Form[User], hashString: String)
 @import utils.TemplateHelper._
 
 @siteLayout(message, utils.MenuType.NONE) {
